# projectai

./: .gitignore  Makefile  pyproject.toml
telepuzik_1/: telepuzik.py
