[tool.poetry]
name = "1111"
version = "0.1.0"
description = ""
authors = ["Mifinz"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
diffusers = "^0.19.3"
torch = "^2.0.1"
openai = "^0.27.8"
requests = "^2.31.0"
telebot = "^0.0.5"
transformers = "^4.31.0"
accelerate = "^0.21.0"
pytest = "^7.4.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
